# MUSICO-VERSE-

./: CMakeLists.txt  LICENSE  README.md  build.sh
src/: audio_engine.cpp  audio_engine.h  audio_stub.cpp  av_decoder.cpp  av_decoder.h  cover_art.h  lyrics.h  main.cpp  player.cpp  player.h  playlist.cpp  playlist.h  settings.h  visualizer.cpp  visualizer.h
src/kissfft/: kiss_fft.h
